# HTS_doseresponse

./: HTS_IC50_fitting.ipynb  LICENSE  MANIFEST.in  README.md  pyproject.toml
examples/: process_data.py
src/HTS_doseresponse/: __init__.py  ht_curve_fitting.py
src/HTS_doseresponse/data/: example_data.csv
