# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "HTS_doseresponse"
version = "0.0.2"
description = "Dose Response Curve Fitting"
readme = "README.md"
authors = [{ name = "Scott McPhee", email = "sahmcphee@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
	"Operating System :: OS Independent"
]
keywords = ["IC50", "biochemistry", "pharmacology"]
dependencies = [
    "pandas>1.5.3",
    "numpy>1.24.3",
	"matplotlib>3.7.1",
	"seaborn>0.13.1",
	"scipy>1.11.4",
    "tomli; python_version < '3.11'",
]
requires-python = ">=3.10.12"

[project.optional-dependencies]
dev = ["pip-tools", "pytest"]

[tool.setuptools]

include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
HTS_doseresponse = ["*.csv"]
"HTS_doseresponse.data" = ["*.csv"]

[project.urls]
Homepage = "https://github.com/samcphee/HTS_doseresponse"
Issues = "https://github.com/samcphee/HTS_doseresponse/issues"